Add overlays (ui::Overlay and ui::OverlayManager classes).

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -27,6 +27,8 @@ add_library(ui-lib
   menu.cpp
   message.cpp
   message_loop.cpp
+  overlay.cpp
+  overlay_manager.cpp
   paint_event.cpp
   popup_window.cpp
   preferred_size_event.cpp
