Fix UI unit tests: they must use/be linked to "she" library.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -459,7 +459,7 @@ endfunction()
 
 find_unittests(base base-lib ${sys_libs})
 find_unittests(gfx gfx-lib base-lib ${sys_libs})
-find_unittests(ui ui-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
+find_unittests(ui ui-lib she gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_unittests(file ${all_libs})
 find_unittests(app ${all_libs})
 find_unittests(. ${all_libs})
