Add support for VC++11 (2012)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,13 @@ if(ENABLE_MEMLEAK)
   add_definitions(-DMEMLEAK)
 endif()
 
+# Fix to compile gtest with VC11 (2012)
+if(NOT USE_SHARED_GTEST)
+  if (MSVC_VERSION EQUAL 1700)
+    add_definitions(-D_VARIADIC_MAX=10)
+  endif()
+endif()
+
 ######################################################################
 # Platform specific stuff
 
