--- a/src/allegro/CMakeLists.txt
+++ b/src/allegro/CMakeLists.txt
@@ -44,7 +44,7 @@ set(FRAMEWORK_INSTALL_PREFIX "/Library/Frameworks" CACHE STRING
 
 #-----------------------------------------------------------------------------#
 #
-# Unix platform checks
+# Platform checks
 #
 
 include(CheckIncludeFiles)
@@ -71,7 +71,6 @@ if(UNIX)
     check_include_files(linux/soundcard.h ALLEGRO_HAVE_LINUX_SOUNDCARD_H)
     check_include_files(machine/soundcard.h ALLEGRO_HAVE_MACHINE_SOUNDCARD_H)
     check_include_files(soundcard.h ALLEGRO_HAVE_SOUNDCARD_H)
-    check_include_files(stdint.h ALLEGRO_HAVE_STDINT_H)
     check_include_files(sys/io.h ALLEGRO_HAVE_SYS_IO_H)
     check_include_files(sys/stat.h ALLEGRO_HAVE_SYS_STAT_H)
     check_include_files(sys/time.h ALLEGRO_HAVE_SYS_TIME_H)
@@ -147,6 +146,8 @@ if(UNIX)
     # XXX inline
     # XXX size_t
 endif(UNIX)
+
+check_include_files(stdint.h ALLEGRO_HAVE_STDINT_H)
 
 #-----------------------------------------------------------------------------#
 #
