Add gfx::Region class
This class will be used to replace JRegion in ui lib.

--- a/src/gfx/CMakeLists.txt
+++ b/src/gfx/CMakeLists.txt
@@ -1,7 +1,8 @@
 # ASEPRITE
-# Copyright (C) 2001-2012  David Capello
+# Copyright (C) 2001-2013  David Capello
 
 add_library(gfx-lib
   hsv.cpp
+  region.cpp
   rgb.cpp
   transformation.cpp)
