Replace modules/editors.cpp with widgets::Workspace class
Now we have one editor for each Document we want to edit. Before we were
creating one editor and switching the document on it, but now we have
several Editors (one for each opened Document). This simplifies the
Document implementation, because it doesn't need to know temporal
Editor information (like "preferred editor settings").

- Removed all code from modules/editors.cpp (legacy from C code).
- Removed PreferredEditorSettings class and
  Document::getPreferredEditorSettings().
- Added Workspace/WorkspaceView classes.
- Added DocumentView (a DocumentObserver).
- Added MiniEditorWindow class.
- Removed SelectFileCommand & CloseEditorCommand.
- Added TabView interface instead of using a raw void* in
  Tabs/TabsDelegate classes.
- Modified editors_draw_sprite() calls to Document::notifySpritePixelsModified
  notifications.
- The "current_editor" global variable wasn't removed because it's
  used in several places yet, but it will be removed in the near future.
  (Also this variable now can be NULL when we don't have an opened
  document.)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -255,7 +255,6 @@ add_library(aseprite-library
   commands/cmd_save_file.cpp
   commands/cmd_save_mask.cpp
   commands/cmd_scroll.cpp
-  commands/cmd_select_file.cpp
   commands/cmd_sprite_editor.cpp
   commands/cmd_sprite_properties.cpp
   commands/cmd_sprite_size.cpp
@@ -377,6 +376,7 @@ add_library(aseprite-library
   widgets/color_button.cpp
   widgets/color_selector.cpp
   widgets/color_sliders.cpp
+  widgets/document_view.cpp
   widgets/drop_down_button.cpp
   widgets/editor/cursor.cpp
   widgets/editor/drawing_state.cpp
@@ -399,11 +399,13 @@ add_library(aseprite-library
   widgets/main_menu_bar.cpp
   widgets/main_window.cpp
   widgets/menuitem2.cpp
+  widgets/mini_editor.cpp
   widgets/palette_view.cpp
   widgets/popup_window_pin.cpp
   widgets/status_bar.cpp
   widgets/tabs.cpp
-  widgets/toolbar.cpp)
+  widgets/toolbar.cpp
+  widgets/workspace.cpp)
 
 ######################################################################
 # ASEPRITE application
