Simple implementation of issue #17 - Export animation to JSON/sprite sheet files
This is a good start point. From here we can add more formats and options
(XML, custom formats, templates, etc.), rotated sprites, trim, etc.)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -100,6 +100,7 @@ add_library(app-library
   data_recovery.cpp
   document.cpp
   document_api.cpp
+  document_exporter.cpp
   document_location.cpp
   document_undo.cpp
   documents.cpp
