Add styles to the Timeline widget
- Added support for styles to SkinTheme and skin.xml.
- Added app::skin::Style/Rule/BackgroundRule/IconRule/TextRule classes.
- Added app::skin::SkinPart class to refer to one part (BITMAP) of
  the skin sheet.
- Renamed app::skin::SkinPart to SkinParts as now SkinPart is a class.

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -177,9 +177,12 @@ add_library(app-library
   ui/palette_view.cpp
   ui/popup_window_pin.cpp
   ui/skin/button_icon_impl.cpp
+  ui/skin/skin_part.cpp
   ui/skin/skin_property.cpp
   ui/skin/skin_slider_property.cpp
   ui/skin/skin_theme.cpp
+  ui/skin/style.cpp
+  ui/skin/style_sheet.cpp
   ui/status_bar.cpp
   ui/tabs.cpp
   ui/timeline.cpp
