Added "Grab Alpha" option to eye dropper (issue 134)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(app-library
   backup.cpp
   check_update.cpp
   color.cpp
+  color_picker.cpp
   color_swatches.cpp
   color_utils.cpp
   commands/cmd_about.cpp
