--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,8 @@ if(MSVC)
 endif(MSVC)
 
 # Libraries in this directory
-set(aseprite_libraries app-library css-lib raster-lib scripting-lib
-  undo-lib filters-lib ui-lib she gfx-lib base-lib)
+set(aseprite_libraries app-lib css-lib doc-lib raster-lib
+  scripting-lib undo-lib filters-lib ui-lib she gfx-lib base-lib)
 
 # Directories where .h files can be found
 include_directories(. .. ../third_party)
@@ -150,6 +150,7 @@ endif()
 # Aseprite Libraries (in preferred order to be built)
 
 add_subdirectory(base)
+add_subdirectory(doc)
 add_subdirectory(filters)
 add_subdirectory(gfx)
 add_subdirectory(css)
