Implement issue #265 - command/keyboard shortcut for "last export" operation
- Add doc::ExportData with information about the last export operation.
- Add RepeatLastExport command.
- Add SaveFileBaseCommand as base Command class, to accept "filename"
  param.
- Add parameters to ExportSpriteSheet so we can call it without UI
  from "repeat last export".

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(app-lib
   commands/cmd_remove_cel.cpp
   commands/cmd_remove_frame.cpp
   commands/cmd_remove_layer.cpp
+  commands/cmd_repeat_last_export.cpp
   commands/cmd_reselect_mask.cpp
   commands/cmd_rotate_canvas.cpp
   commands/cmd_save_file.cpp
