Add PalettePopup in ColorBar to load predefined palettes from data/palette/
- Add PalettesLoader helper class to load palettes in background
- Add PaletteListBox widget
- Add PalettePopup widget

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -135,6 +135,7 @@ add_library(app-lib
   modules/gui.cpp
   modules/palettes.cpp
   objects_container_impl.cpp
+  palettes_loader.cpp
   project.cpp
   recent_files.cpp
   resource_finder.cpp
@@ -177,6 +178,8 @@ add_library(app-lib
   ui/main_menu_bar.cpp
   ui/main_window.cpp
   ui/mini_editor.cpp
+  ui/palette_listbox.cpp
+  ui/palette_popup.cpp
   ui/palette_view.cpp
   ui/popup_window_pin.cpp
   ui/skin/button_icon_impl.cpp
