--- a/src/main/resources_win32.rc
+++ b/src/main/resources_win32.rc
@@ -1,8 +1,8 @@
 allegro_icon ICON data/icons/ase.ico
 
 1 VERSIONINFO
-  FILEVERSION 0,9,6,0
-  PRODUCTVERSION 0,9,6,0
+  FILEVERSION 1,0,0,0
+  PRODUCTVERSION 1,0,0,0
   FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
   FILEFLAGS 0x1L
@@ -17,14 +17,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "Comments", "http://www.aseprite.org/"
-            VALUE "FileDescription", "ASEPRITE - Animated sprites editor & pixel art tool"
-            VALUE "FileVersion", "0,9,6,0"
+            VALUE "Comments", "http://aseprite.org/"
+            VALUE "FileDescription", "Aseprite - Animated sprites editor & pixel art tool"
+            VALUE "FileVersion", "1,0,0,0"
             VALUE "InternalName", "aseprite"
-            VALUE "LegalCopyright", "Copyright (C) 2001-2012 by David Capello"
+            VALUE "LegalCopyright", "Copyright (C) 2001-2014 by David Capello"
             VALUE "OriginalFilename", "aseprite.exe"
             VALUE "ProductName", "ASEPRITE"
-            VALUE "ProductVersion", "0,9,6,0"
+            VALUE "ProductVersion", "1,0,0,0"
         END
     END
     BLOCK "VarFileInfo"
