Replace the dummy developer "console" with a WorkspaceView
This is completely experimental stuff. Just added this because the previous
window doesn't make sense.

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -156,6 +156,7 @@ add_library(app-lib
   ui/color_selector.cpp
   ui/color_sliders.cpp
   ui/context_bar.cpp
+  ui/devconsole_view.cpp
   ui/document_view.cpp
   ui/drop_down_button.cpp
   ui/editor/cursor.cpp
