Add timeline options for onion skin, loop section, and animation direction
- Add red/blue onion skin type
- Add app::calculate_next_frame() function to calculate the next frame
  depending of the timeline configuration (loop range, animation direction)
- Add app::finder() to simplify the access to widgets loaded from xml files

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -126,6 +126,7 @@ add_library(app-lib
   flatten.cpp
   gfxmode.cpp
   gui_xml.cpp
+  handle_anidir.cpp
   ini_file.cpp
   job.cpp
   launcher.cpp
@@ -155,6 +156,7 @@ add_library(app-lib
   ui/color_button.cpp
   ui/color_selector.cpp
   ui/color_sliders.cpp
+  ui/configure_timeline_popup.cpp
   ui/context_bar.cpp
   ui/devconsole_view.cpp
   ui/document_view.cpp
