Rename raster::Pen -> raster::Brush

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -17,8 +17,8 @@ add_library(app-lib
   commands/cmd_cancel.cpp
   commands/cmd_canvas_size.cpp
   commands/cmd_cel_properties.cpp
+  commands/cmd_change_brush.cpp
   commands/cmd_change_color.cpp
-  commands/cmd_change_pen.cpp
   commands/cmd_change_pixel_format.cpp
   commands/cmd_clear.cpp
   commands/cmd_close_file.cpp
