--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -137,9 +137,10 @@ add_library(app-lib
   modules/gui.cpp
   modules/palettes.cpp
   objects_container_impl.cpp
-  palettes_loader.cpp
   project.cpp
   recent_files.cpp
+  res/palettes_loader_delegate.cpp
+  res/resources_loader.cpp
   resource_finder.cpp
   settings/ui_settings_impl.cpp
   shell.cpp
@@ -184,10 +185,11 @@ add_library(app-lib
   ui/main_window.cpp
   ui/mini_editor.cpp
   ui/notifications.cpp
-  ui/palette_listbox.cpp
+  ui/palettes_listbox.cpp
   ui/palette_popup.cpp
   ui/palette_view.cpp
   ui/popup_window_pin.cpp
+  ui/resources_listbox.cpp
   ui/skin/button_icon_impl.cpp
   ui/skin/skin_part.cpp
   ui/skin/skin_property.cpp
