Add she::Font class (wrapper of Allegro FONT)
This is an huge refactor to avoid handling Allegro FONT directly. Some
changes:
* Add she::System::defaultDisplay/Font, createRgbaSurface, loadSurface,
  and loadRgbaSurface.
* Rename she::CreateSystem/Instance to she::create_system/instance.
* Remove ui/font.cpp and move ui/fontbmp.cpp to she library.
* ui::IButtonIcon uses she::Surface instead of BITMAP.
* Rename she::LockedSurface::drawAlphaSurface -> drawRgbaSurface
* Rename ui::SetDisplay -> set_display
* Rename _ji_font_text_len -> ui::Graphics::measureUIStringLength

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SHE
-# Copyright (C) 2012-2013  David Capello
+# Copyright (C) 2012-2014  David Capello
 
 add_library(she
-  she_alleg4.cpp)
+  alleg4/fontbmp.cpp
+  alleg4/she_alleg4.cpp)
