Now ui::Graphics uses she::Surface instead of Allegro BITMAP

--- a/src/raster/CMakeLists.txt
+++ b/src/raster/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(raster-lib
   cel_io.cpp
   color_scales.cpp
   conversion_alleg.cpp
+  conversion_she.cpp
   dirty.cpp
   dirty_io.cpp
   file/col_file.cpp
