--- a/src/updater/CMakeLists.txt
+++ b/src/updater/CMakeLists.txt
@@ -7,10 +7,8 @@ set(UPDATER_LIB_SOURCES
 
 if(WIN32)
   set(UPDATER_LIB_SOURCES ${UPDATER_LIB_SOURCES} user_agent_win.c)
-else()
-  if(APPLE)
-    set(UPDATER_LIB_SOURCES ${UPDATER_LIB_SOURCES} user_agent_mac.m)
-  endif()
+elseif(APPLE)
+  set(UPDATER_LIB_SOURCES ${UPDATER_LIB_SOURCES} user_agent_mac.mm)
 endif()
 
 add_library(updater-lib ${UPDATER_LIB_SOURCES})
