Mac OS X: Add support to open files with double-click from Finder

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -1,6 +1,12 @@
 # SHE
 # Copyright (C) 2012-2014  David Capello
 
-add_library(she
+set(SHE_SOURCES
   alleg4/fontbmp.cpp
   alleg4/she_alleg4.cpp)
+
+if(APPLE AND NOT USE_SHARED_ALLEGRO4)
+  list(APPEND SHE_SOURCES alleg4/app.mm)
+endif()
+
+add_library(she ${SHE_SOURCES})
