Fix #11 - now we support all formats to load/save palettes
Also we've removed dependency with Allegro code to load/save palette files.

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -120,6 +120,7 @@ add_library(app-lib
   file/gif_format.cpp
   file/ico_format.cpp
   file/jpeg_format.cpp
+  file/palette_file.cpp
   file/pcx_format.cpp
   file/png_format.cpp
   file/tga_format.cpp
